--- a/general_manager/CMakeLists.txt
+++ b/general_manager/CMakeLists.txt
@@ -27,4 +27,4 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 rosbuild_add_executable(general_mgr src/general_manager.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
+target_link_libraries(general_mgr boost_filesystem boost_system)
