--- a/learning_machine/CMakeLists.txt
+++ b/learning_machine/CMakeLists.txt
@@ -32,5 +32,5 @@ rosbuild_gensrv()
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
-rosbuild_add_executable(learner src/learning_machine.cpp)
-target_link_libraries(learner log4cxx boost_graph)
+#rosbuild_add_executable(learner src/learning_machine.cpp)
+#target_link_libraries(learner log4cxx boost_graph)
