--- a/hiro_arm_navigation/config/ompl_planning.yaml
+++ b/hiro_arm_navigation/config/ompl_planning.yaml
@@ -4,10 +4,26 @@ planner_configs:
   LBKPIECEkConfig1:
     type: kinematic::LBKPIECE
 groups:
+  - larm
+  - larm_cartesian
+  - larm_U_chest
+  - larm_U_chest_cartesian
   - rarm
   - rarm_cartesian
   - rarm_U_chest
   - rarm_U_chest_cartesian
+larm:
+  planner_type: JointPlanner
+  planner_configs:
+    - SBLkConfig1
+    - LBKPIECEkConfig1
+  projection_evaluator: joint_state
+larm_U_chest:
+  planner_type: JointPlanner
+  planner_configs:
+    - SBLkConfig1
+    - LBKPIECEkConfig1
+  projection_evaluator: joint_state
 rarm:
   planner_type: JointPlanner
   planner_configs:
@@ -20,6 +36,80 @@ rarm_U_chest:
     - SBLkConfig1
     - LBKPIECEkConfig1
   projection_evaluator: joint_state
+larm_cartesian:
+  parent_frame: link_chest_yaw
+  physical_group: larm
+  planner_type: RPYIKTaskSpacePlanner
+  state_spaces:
+    - x
+    - y
+    - z
+    - roll
+    - pitch
+    - yaw
+  x:
+    type: Linear
+    min: -2.0
+    max: 2.0
+  y:
+    type: Linear
+    min: -2.0
+    max: 2.0
+  z:
+    type: Linear
+    min: -2.0
+    max: 2.0
+  roll:
+    type: Revolute
+  pitch:
+    type: Revolute
+  yaw:
+    type: Revolute
+  planner_configs:
+    - SBLkConfig1
+    - LBKPIECEkConfig1
+  kinematics_solver: arm_kinematics_constraint_aware/KDLArmKinematicsPlugin
+  tip_name: link_lhand_palm
+  root_name: link_chest_yaw
+  projection_evaluator: joint_state
+  longest_valid_segment_fraction: 0.001
+larm_U_chest_cartesian:
+  parent_frame: link_base
+  physical_group: larm_U_chest
+  planner_type: RPYIKTaskSpacePlanner
+  state_spaces:
+    - x
+    - y
+    - z
+    - roll
+    - pitch
+    - yaw
+  x:
+    type: Linear
+    min: -2.0
+    max: 2.0
+  y:
+    type: Linear
+    min: -2.0
+    max: 2.0
+  z:
+    type: Linear
+    min: -2.0
+    max: 2.0
+  roll:
+    type: Revolute
+  pitch:
+    type: Revolute
+  yaw:
+    type: Revolute
+  planner_configs:
+    - SBLkConfig1
+    - LBKPIECEkConfig1
+  kinematics_solver: arm_kinematics_constraint_aware/KDLArmKinematicsPlugin
+  tip_name: link_lhand_palm
+  root_name: link_base
+  projection_evaluator: joint_state
+  longest_valid_segment_fraction: 0.001
 rarm_cartesian:
   parent_frame: link_chest_yaw
   physical_group: rarm
