--- a/planner_manager/CMakeLists.txt
+++ b/planner_manager/CMakeLists.txt
@@ -32,7 +32,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 rosbuild_gensrv()
 
 #common commands for building c++ executables and libraries
-rosbuild_add_library(${PROJECT_NAME} /home/vektor/hiroken-ros-pkg/learning_machine/libsvm-3.16/svm.cpp)
+rosbuild_add_library(${PROJECT_NAME} ${learning_machine_PACKAGE_PATH}/libsvm-3.16/svm.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
