end of for iros-2013

--- a/learning_machine/data/tmm_paths.yaml
+++ b/learning_machine/data/tmm_paths.yaml
@@ -1,23 +1,45 @@
   [
-     '/home/vektor/rss-2013/data/baseline/v.2/1obj/run.1obj.0/tmm.dot'  
-    ,'/home/vektor/rss-2013/data/baseline/v.2/2obj/run.2obj.20130220.0/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/2obj/run.2obj.20130220.4/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/datarun.3obj.20130220.1/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130223.0/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130223.1/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130223.2/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130223.3/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130223.b.1/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130223.b.2/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130225.b.0.rerun/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130225.b.1/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130225.b.4/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130226.0/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130226.1/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130226.2/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130226.3/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/3obj/run.3obj.20130226.4/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/4obj/run.4obj.20130221.0/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/4obj/run.4obj.20130221.1/tmm.dot'
-    ,'/home/vektor/rss-2013/data/baseline/v.2/4obj/run.4obj.20130222.0/tmm.dot'
+     '/home/vektor/rss-2013/data/baseline/v.3/5obj/run.5obj.20130310a.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/5obj/run.5obj.20130310b.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/5obj/run.5obj.20130310c.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130307.1/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130307.4/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130307.7/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130307.8/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130307.9/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130308c.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130308c.2/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130309.3/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130310b.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/4obj/run.4obj.20130310h.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130307b.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130307b.2/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130307b.3/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130307b.5/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130307b.6/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130307b.7/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130310a.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130310d.1/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130310d.2/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/3obj/run.3obj.20130310f.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130308a.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130308a.1/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130308a.2/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130308a.3/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130308a.4/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130308b.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130308b.3/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130310a.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130310a.1/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/2obj/run.2obj.20130310a.2/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130308a.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130308a.1/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130308a.2/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130308a.3/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130308a.4/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130310a.0/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130310a.1/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130310a.2/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130310a.3/tmm.dot'
+    ,'/home/vektor/rss-2013/data/baseline/v.3/1obj/run.1obj.20130310a.4/tmm.dot'
   ]
