on using svr and its analysis code

--- a/general_manager/CMakeLists.txt
+++ b/general_manager/CMakeLists.txt
@@ -13,6 +13,7 @@ rosbuild_init()
 
 rosbuild_find_ros_package(learning_machine)
 include_directories(${learning_machine_PACKAGE_PATH}/include)
+#include_directories(${learning_machine_PACKAGE_PATH}/libsvm-3.16)
 
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -26,7 +27,9 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 #common commands for building c++ executables and libraries
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
+#rosbuild_add_library(${PROJECT_NAME} ${learning_machine_PACKAGE_PATH}/libsvm-3.16/svm.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
+
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 rosbuild_add_executable(general_mgr src/general_manager.cpp)
