on prj6.trajectory optimizer

--- a/hiro_sensor/CMakeLists.txt
+++ b/hiro_sensor/CMakeLists.txt
@@ -31,4 +31,4 @@ rosbuild_gensrv()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 
 rosbuild_add_executable(vis src/vision_sensor.cpp)
-target_link_libraries(vis log4cxx)
+target_link_libraries(vis log4cxx boost_graph)
