--- a/general_manager/CMakeLists.txt
+++ b/general_manager/CMakeLists.txt
@@ -18,6 +18,9 @@ include_directories(${learning_machine_PACKAGE_PATH}/include)
 rosbuild_find_ros_package(hiro_common)
 include_directories(${hiro_common_PACKAGE_PATH}/include)
 
+# For matlab engine
+include_directories(/usr/local/matlab/R2009b/extern/include)
+
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
@@ -35,5 +38,9 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
+
+# set the path to the library folder
+link_directories(/usr/local/matlab/R2009b/bin/glnxa64)
+
 rosbuild_add_executable(general_mgr src/general_manager.cpp)
-target_link_libraries(general_mgr boost_filesystem boost_system lwpr log4cxx)
+target_link_libraries(general_mgr boost_filesystem boost_system lwpr log4cxx eng mat mx ut mwfl boost_date_time icudata icuuc icui18n icuio boost_filesystem boost_regex hdf5_hl hdf5 boost_thread-gcc42-mt-1_36 boost_signals-gcc42-mt-1_36 boost_system-gcc42-mt-1_36) 
